Activiti boshqa service bolgani uchun ochdi